--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
-<img src="Media/gato.png">
-<!-- TEST WEBSITE :3-->
-<br>
-<h2>someday this website will be finished</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to the "fox corner"!</title>
+    <link rel="stylesheet" href="Media/style_space.css">
+</head>
+<body>
+    <div class="_Background_Layer_0"></div>
+    <div class="_Background_Layer_1"></div>
+    <div class="_Background_Layer_2"></div>
+    
+<div class="_Window_Info">
+    <div class="_Window_Header">
+        <img src="/Media/Icons/Warning.png" class="_Window_Header_Icon" alt="">
+        <span class="_Window_Header_Text">Uh uh...</span>
+    </div>
+    <div class="_Window_Layout">
+        <div class="_Window_Textt">
+            Hey! Looks like you're here too early...<br>
+            The site is still under construction :3<br>
+            <br><br>
+            Come back... sometime later.</div>
+        <img src="/Media/Foxioo/Smol.png" class="_Window_Image" alt="">
+    </div>
+</div>
+
+
+</div>
+</body>
+</html>
