--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             Hey! Looks like you're here too early...<br>
             The site is still under construction :3<br>
             <br><br>
-            Come back... sometime later.</div>
+            Come back... sometime later.<br>
+            <a style="font-size: 8px">Last Update: 03.08.25 04:14</a><br>
+        </div>
         <img src="/Media/Foxioo/Smol.png" class="_Window_Image" alt="">
     </div>
 </div>
