--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 
 <body>
     <script src="Scripts/MouseStars.js"></script>
+    <script src="Scripts/LastUpdate.js"></script>
 
     <div class="_Background_Layer_0"></div>
     <div class="_Background_Layer_1"></div>
     <div class="_Background_Layer_2"></div>
     <div class="_Background_Layer_3"></div>
-    
+
+    <!-- ################################################ -->
+    <!--
     <div class="_Window_Info">
         <div class="_Window_Header">
             <img src="/Media/Icons/Warning.png" class="_Window_Header_Icon" alt="">
             <span class="_Window_Header_Text">Uh uh...</span>
         </div>
         <div class="_Window_Layout">
-            <div class="_Window_Textt">
+            <div class="_Window_Text">
                 Hey! Looks like you're here too early...<br>
                 The site is still under construction :3<br>
                 <br><br>
@@ -31,6 +34,67 @@
             <img src="/Media/Foxioo/Smol.png" class="_Window_Image" alt="">
         </div>
     </div>
+    -->
+    <!-- ################################################ -->
+
+    <div class="_Main_Panel">
+        <img src="Media/Banner/Banner_0.png" class="_Main_Banner" alt="Banner">
+        <div class="_Main_Content">
+            <div class="_Main_Inner_Content">
+                <p>Hey! Looks like you're here too early..</p>
+                <p>The site is still under construction :3</p>
+                <br>
+                <p>Come back... sometime later.</p>
+                <p><img src="Media/Foxioo/Smol.png" class="_Main_Image" alt="Foxioo" ></p>
+                <br>
+                <br>
+                <p>ama ama pym</p>
+                <p><img src="Media/Photos/Main/Vaporeon.gif" style="width: 260px;"></p>
+            </div>
+        </div>
+
+        <!-- ############################################### -->
+
+        <div>
+            <div class="_Window_Info _Window_Side _Window_Nav">
+                <div class="_Window_Header">
+                    <img src="/Media/Icons/Navi.png" class="_Window_Header_Icon" alt="">
+                    <span class="_Window_Header_Text">Navigation</span>
+                </div>
+                <div class="_Window_Layout">
+                    <div class="_Window_Text">
+                        <ul style="margin: 0; padding-left: 16px;">
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#projects">Projects</a></li>
+                            <li><a href="#games">Games</a></li>
+                            <li><a href="#about">About</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="_Window_Info _Window_Side _Window_Update">
+                <div class="_Window_Header">
+                    <img src="/Media/Icons/Clock.png" class="_Window_Header_Icon" alt="">
+                    <span class="_Window_Header_Text">Update</span>
+                </div>
+                <div class="_Window_Layout">
+                    <div class="_Window_Text" id="last-update">
+                        Loading...<br>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- ############################################### -->
+
+    </div>
+
+    <!-- ############################################### -->
+
+
+
 
 
 
