--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+
+    <img src=".well-known/discord" hidden>
     <script src="Scripts/MouseStars.js"></script>
     <script src="Scripts/LastUpdate.js"></script>
 
