--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 <p>The site is still under construction :3</p>
                 <br>
                 <p>Come back... sometime later.</p>
-                <p><img src="Media/Foxioo/Smol.png" class="_Main_Image" alt="Foxioo" ></p>
+                <p><img src="Media/Foxioo/Smol.png" class="_Main_Image" alt="Foxioo" style="image-rendering: pixelated;"></p>
                 <br>
                 <br>
                 <p>ama ama pym</p>
-                <p><img src="Media/Photos/Main/Vaporeon.gif" style="width: 260px;"></p>
+                <p><img src="Media/Photos/Main/Vaporeon.gif" style="width: 260px;" style="image-rendering: pixelated;"></p>
             </div>
         </div>
 
