--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     -->
     <!-- ################################################ -->
 
-    <div class="_Main_Panel">
+    <main class="_Main_Panel">
         <img src="Media/Banner/Banner_0.png" class="_Main_Banner" alt="Banner">
         <div class="_Main_Content">
             <div class="_Main_Inner_Content">
@@ -65,11 +65,27 @@
                 </div>
                 <div class="_Window_Layout">
                     <div class="_Window_Text">
-                        <ul style="margin: 0; padding-left: 16px;">
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#projects">Projects</a></li>
-                            <li><a href="#games">Games</a></li>
-                            <li><a href="#about">About</a></li>
+                        <ul class="_Nav_List">
+                            <li>
+                                <img src="Media/Icons/Star0.png" alt="" class="_Nav_Icon" style="color: #FFFFCC">
+                                <a href="#home" style="color: #FFFFCC">Home</a>
+                            </li>
+                            <li>
+                                <img src="Media/Icons/Star1.png" alt="" class="_Nav_Icon" style="color: #FFCCF5">
+                                <a href="#projects" style="color: #FFCCF5">Projects</a>
+                            </li>
+                            <li>
+                                <img src="Media/Icons/Star2.png" alt="" class="_Nav_Icon" style="color: #CCFAFF">
+                                <a href="#games" style="color: #CCFAFF">Games</a>
+                            </li>
+                            <li>
+                                <img src="Media/Icons/Star0.png" alt="" class="_Nav_Icon" style="color: #FFFFCC">
+                                <a href="#links" style="color: #FFFFCC">Links</a>
+                            </li>
+                            <li>
+                                <img src="Media/Icons/Star1.png" alt="" class="_Nav_Icon" style="color: #FFCCF5">
+                                <a href="#about" style="color: #FFCCF5">About</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -78,7 +94,7 @@
             <div class="_Window_Info _Window_Side _Window_Update">
                 <div class="_Window_Header">
                     <img src="/Media/Icons/Clock.png" class="_Window_Header_Icon" alt="">
-                    <span class="_Window_Header_Text">Update</span>
+                    <span class="_Window_Header_Text">Info</span>
                 </div>
                 <div class="_Window_Layout">
                     <div class="_Window_Text" id="last-update">
@@ -91,7 +107,7 @@
 
         <!-- ############################################### -->
 
-    </div>
+    </main>
 
     <!-- ############################################### -->
 
