--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
 
     <img src=".well-known/discord" hidden>
+
     <script src="Scripts/MouseStars.js"></script>
     <script src="Scripts/LastUpdate.js"></script>
+    <script src="Scripts/FlyingStars.js"></script>
 
     <div class="_Background_Layer_0"></div>
     <div class="_Background_Layer_1"></div>
@@ -47,7 +49,7 @@
                 <p>The site is still under construction :3</p>
                 <br>
                 <p>Come back... sometime later.</p>
-                <p><img src="Media/Foxioo/Smol.png" class="_Main_Image" alt="Foxioo" style="image-rendering: pixelated;"></p>
+                <p><img src="Media/Foxioo/OhNo.png" class="_Main_Image" alt="Foxioo" style="image-rendering: pixelated;"></p>
                 <br>
                 <br>
                 <p>ama ama pym</p>
