--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <br>
                 <p>ama ama pym</p>
                 <p><img src="Media/Photos/Main/Vaporeon.gif" style="width: 260px;" style="image-rendering: pixelated;"></p>
+                <p><img src="Media/Foxioo/300.png" class="_Main_Image" alt="Foxioo" style="image-rendering: pixelated;"></p>
             </div>
         </div>
 
