--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to the "fox corner"!</title>
     <link rel="stylesheet" href="Media/style_space.css">
+    <link rel="stylesheet" href="Media/Buttons/button_styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 
@@ -15,6 +16,7 @@
     <script src="Scripts/MouseStars.js"></script>
     <script src="Scripts/LastUpdate.js"></script>
     <script src="Scripts/FlyingStars.js"></script>
+    <script src="Scripts/ButtonScroller.js"></script>
 
     <div class="_Background_Layer_0"></div>
     <div class="_Background_Layer_1"></div>
@@ -56,6 +58,9 @@
                 <p>ama ama pym</p>
                 <p><img src="Media/Photos/Main/Vaporeon.gif" style="width: 260px;" style="image-rendering: pixelated;"></p>
                 <p><img src="Media/Foxioo/300.png" class="_Main_Image" alt="Foxioo" style="image-rendering: pixelated;"></p>
+                
+                <!-- Kontener na przewijające się przyciski -->
+                <div class="_Button_Container"></div>
             </div>
         </div>
 
