--- a/index.html
+++ b/index.html
@@ -47,19 +47,23 @@
     <main class="_Main_Panel">
         <img src="Media/Banner/Banner_0.png" class="_Main_Banner" alt="Banner">
         <div class="_Main_Content">
+
+            <div class="_UI_Elements">
+                <img src="/Media/Banner/Paint Top.png" style="left: -16px; top: -20px;">
+                <img src="/Media/Banner/Paint Bottom.png" style="left: -12px; bottom: -50px;">
+            </div>
+            
             <div class="_Main_Inner_Content">
-                <p>Hey! Looks like you're here too early..</p>
+
+                <p><b>Hey! Looks like you're here too early..</b></p>
                 <p>The site is still under construction :3</p>
-                <br>
                 <p>Come back... sometime later.</p>
-                <p><img src="Media/Foxioo/OhNo.png" class="_Main_Image" alt="Foxioo" style="image-rendering: pixelated;"></p>
-                <br>
-                <br>
+                <p><img src="Media/Foxioo/OhNo.png" class="_Main_Image" alt="Foxioo" style="image-rendering: pixelated; float: left;"></p>
                 <p>ama ama pym</p>
-                <p><img src="Media/Photos/Main/Vaporeon.gif" style="width: 260px;" style="image-rendering: pixelated;"></p>
+                <p><img src="Media/Photos/Main/Vaporeon.gif" style="width: 120px;" style="image-rendering: pixelated;"></p>
                 <p><img src="Media/Foxioo/300.png" class="_Main_Image" alt="Foxioo" style="image-rendering: pixelated;"></p>
                 
-                <!-- Kontener na przewijające się przyciski -->
+                <!-- Przyciski -->
                 <div class="_Button_Container"></div>
             </div>
         </div>
@@ -75,23 +79,23 @@
                 <div class="_Window_Layout">
                     <div class="_Window_Text">
                         <ul class="_Nav_List">
-                            <li>
+                            <li class="_ListYellow">
                                 <img src="Media/Icons/Star0.png" alt="" class="_Nav_Icon" style="color: #FFFFCC">
                                 <a href="#home" style="color: #FFFFCC">Home</a>
                             </li>
-                            <li>
+                            <li class="_ListPink">
                                 <img src="Media/Icons/Star1.png" alt="" class="_Nav_Icon" style="color: #FFCCF5">
                                 <a href="#projects" style="color: #FFCCF5">Projects</a>
                             </li>
-                            <li>
+                            <li class="_ListCyan">
                                 <img src="Media/Icons/Star2.png" alt="" class="_Nav_Icon" style="color: #CCFAFF">
                                 <a href="#games" style="color: #CCFAFF">Games</a>
                             </li>
-                            <li>
+                            <li class="_ListYellow">
                                 <img src="Media/Icons/Star0.png" alt="" class="_Nav_Icon" style="color: #FFFFCC">
                                 <a href="#links" style="color: #FFFFCC">Links</a>
                             </li>
-                            <li>
+                            <li class="_ListPink">
                                 <img src="Media/Icons/Star1.png" alt="" class="_Nav_Icon" style="color: #FFCCF5">
                                 <a href="#about" style="color: #FFCCF5">About</a>
                             </li>
@@ -108,6 +112,18 @@
                 <div class="_Window_Layout">
                     <div class="_Window_Text" id="last-update">
                         Loading...<br>
+                    </div>
+                </div>
+            </div>
+
+            <div class="_Window_Info _Window_Side _Window_Senko">
+                <div class="_Window_Header">
+                    <img src="/Media/Icons/Senko.png" class="_Window_Header_Icon" alt="">
+                    <span class="_Window_Header_Text">Senko-san</span>
+                </div>
+                <div class="_Window_Layout">
+                    <div class="_Window_Text" id="Senko">
+                        <img src="/Media/Photos/Senko/uwu-anime.gif" style="width: 100%; image-rendering:pixelated;">
                     </div>
                 </div>
             </div>
